--- a/bidirect_rnn_imageClassification_GColab.ipynb
+++ b/bidirect_rnn_imageClassification_GColab.ipynb
@@ -250,7 +250,12 @@
         "\n",
         "Embora poderosas, existem algumas situações nas quais o uso da rede bidirecional não é recomendável (**preferível utilizar a RNN convencional**):\n",
         "- **RNNs bidirecionais não devem ser empregadas quando se deseja prever comportamento ou valor futuro**.\n",
+        "\n",
         "- Não há sentido em utilizar inputs que estão ainda mais distantes no futuro (os inputs da RNN reversa). Isto iria requerer dados que ainda não existem, justamente os que desejamos prever.\n",
+        "\n",
+        "NOTA: Foi citado anteriormente o caso das séries temporais com dados autocorrelacionados. Neste caso, não há problemas em utilizar a rede bidirecional, pois desejamos justamente avaliar o impacto histórico e os efeitos de memória. **Para isso, precisamos avaliar a série temporal dentro de uma sequência de dados temporais finita, com começo e fim bem definidos**. \n",
+        "\n",
+        "Assim, como a avaliação de dados autocorrelacionados em séries temporais não envolve a realização de previsões futuras, mas tão somente a análise de efeitos de memória dentro de um tempo finito, as redes bidirecionais podem ser utilizadas. \n",
         "\n",
         "- Embora este seja um problema para análise de séries temporais com RNNs, não costuma ser uma limitação em NLP. Isso porque, em NLP, costumamos usar a sequência completa (a frase, trecho, ou texto) como input de uma só vez."
       ],
@@ -332,7 +337,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +411,7 @@
       "metadata": {
         "id": "k5LC3b1ag8dX"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -468,7 +473,7 @@
       "metadata": {
         "id": "MsvVetTe_N3j"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +507,7 @@
         },
         "outputId": "8eb92223-df97-4eda-b185-6a96b3a8b55a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +576,7 @@
       "metadata": {
         "id": "CJBjo1kI8_m_"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -621,7 +626,7 @@
       "metadata": {
         "id": "8PLJdSb0BRkS"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -675,7 +680,7 @@
       "metadata": {
         "id": "yfvKBK3ApqpI"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +695,7 @@
         "id": "QDVjYZCyiBL0",
         "outputId": "c10bc584-c684-4100-e022-e8dfa583be60"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +730,7 @@
       "metadata": {
         "id": "M0Q-0pY3rI0h"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -749,7 +754,7 @@
       "metadata": {
         "id": "xTvEzGBpwyQh"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +794,7 @@
         },
         "outputId": "0f598a30-edec-4620-bb45-c036bc36afc6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,7 +818,7 @@
       "metadata": {
         "id": "lMlzWxSjAVn0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +858,7 @@
         "id": "wutstPIgyDid",
         "outputId": "0650cf2a-a9dc-47b0-b57b-aba78601b991"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -944,7 +949,7 @@
       "metadata": {
         "id": "28aBSXWa59ww"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -974,7 +979,7 @@
       "metadata": {
         "id": "QAyummsK5g27"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1040,7 +1045,7 @@
         "id": "aTqvbIRw_eZj",
         "outputId": "0cfabb0f-bb96-4359-bdf6-9b15243408db"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1082,7 +1087,7 @@
         "id": "Ss9D42nE_rsb",
         "outputId": "88c50ee2-f5f5-41e1-a78f-fbd6a770add4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
